# whoami

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.http  docker_image_build.sh  mix.exs  requirements.txt
config/: config.exs  dev.exs  prod.exs  prod.secret.exs.template  releases.exs  test.exs
k8s/: deployment.yml  service.yml
lib/: whoami_web.ex
lib/mix/tasks/: docker.ex
lib/whoami/: application.ex  health_manager.ex  helper.ex  root_supervisor.ex  web_server.ex
lib/whoami_web/: endpoint.ex  router.ex
lib/whoami_web/channels/: user_socket.ex
lib/whoami_web/controllers/: info_controller.ex
lib/whoami_web/views/: error_helpers.ex  error_view.ex
rel/: config.exs
src/: main.rs
test/support/: channel_case.ex  conn_case.ex
test/whoami_web/views/: error_view_test.exs
whoami/: __init__.py
