[package]
name = "whoami"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
hostname = "0.3.1"
pnet = "0.33.0"
rand = "0.8.5"
reqwest = "0.11.14"
serde = {version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
